--- a/LYRICSPARTY/lyrics.html
+++ b/LYRICSPARTY/lyrics.html
@@ -13,8 +13,7 @@
 
 <body>
     <header>
-        <div class="title"><h1>The Lyrics Party</h1></div>
-        <div class="navigator">
+        <h1 class="lyrics">THE LYRICS PARTY</h1>
         <nav>
             <ul>
                 <li><a href="#">home</a></li>
@@ -28,30 +27,27 @@
     <main>
         <header>
             <section>
-                <div class="container">
-                    <div class="picture"><img src="/images/img.png" alt="Lyrics party">
-                    </div>
-
-                    <h1 class="letter1">This Must Be The Place (Naive Melody)</h1>
-                    <h2 class="letter2">Talking Heads</h2>
-                    <h3 class="letter3">Album: <strong>Speaking in Tongues</strong></h3>
-                </div>
+                    <img src="/images/img.png" alt="Talking Heads - Speaking in Tongues">
+                    
+                    <h1>This Must Be The Place (Naive Melody)</h1>
+                    <h2>Talking Heads</h2>
+                    <h3>Album: <strong>Speaking in Tongues</strong></h3>
             </section>
         </header>
         <article>
             <aside>
-                <h2 class="aboutthesong">About the song</h2>
+                <h2>About the song</h2>
                 <p><em>"This Must Be the Place (Naive Melody)"</em> is a song by new wave band Talking Heads, released in November 1983 as the second single from their fifth album Speaking in Tongues. The lyrics were written by David Byrne, and the music was written by Byrne and the other members of the band, Chris Frantz, Tina Weymouth and Jerry Harrison.</p>
                 <p>In the "Self Interview" on the DVD of the concert film Stop Making Sense, Byrne states that it is a love song, a topic he tends to avoid because it is "kinda big." He also said of the song:</p>           
                 <blockquote>That's a love song made up almost completely of non sequiturs, phrases that may have a strong emotional resonance but don't have any narrative qualities. It's a real honest kind of love song. I don't think I've ever done a real love song before. Mine always had a sort of reservation, or a twist. I tried to write one that wasn't corny, that didn't sound stupid or lame the way many do. I think I succeeded; I was pretty happy with that.<sup><a href="#cite1">[1]</a></sup></blockquote>
                 
-                <section>
+                <spam class="video">
                     <iframe src="https://www.youtube.com/embed/DFeforW2ycI?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                </section>
+                </spam>
             </aside>
 
             <section>
-                <h2 class="btn1">[Verse 1]</h2>
+                <h2>[Verse 1]</h2>
                 <p>Home is where I want to be<br>
                 Pick me up and turn me round<br>
                 I feel numb, born with a weak heart<br>
@@ -62,8 +58,8 @@
                 It's okay, I know nothing's wrong, nothing</p>
             </section>
 
-            <section class="chorus">
-                <h2 class="btn2">[Chorus]</h2>
+            <section>
+                <h2>[Chorus]</h2>
                 <p>Hi-yeah, I got plenty of time<br>
                 Hi-yeah, you got light in your eyes<br>
                 And you're standing here beside me<br>
@@ -73,7 +69,7 @@
             </section>
 
             <section>
-                <h2 class="btn3">[Verse 2]</h2>
+                <h2>[Verse 2]</h2>
                 <p>Home is where I want to be<br>
                 But I guess I'm already there<br>
                 I come home, she lifted up her wings<br>
@@ -84,8 +80,8 @@
                 If someone asks, this is where I'll be, where I'll be</p>
             </section>
 
-            <section class="chorus">
-                <h2 class="btn4">[Chorus]</h2>
+            <section>
+                <h2>[Chorus]</h2>
                 <p>Hi-yeah, we drift in and out<br>
                 Hi-yeah, sing into my mouth<br>
                 Out of all those kinds of people<br>
